Fix sidebar select (dropdown) alignments
When using position relative the elements will still occupy and affect
space around. This was flagrant when using chromium.

https://archive.org/download/t-34772-writer-selected-img/T34772-relative-shouldbe-absolute.png
as you can see dropdown with arrow are being dragged outside

Also use margin-block-start to add vertical start margin (e.g. top) to
element depending on the element's writing mode, directionality,
and text orientation.

--- a/browser/css/jsdialogs.css
+++ b/browser/css/jsdialogs.css
@@ -475,11 +475,12 @@ input[type='number']:hover::-webkit-outer-spin-button {
 	background: url('images/jquery-ui-lightness/ui-icons_222222_256x240.png') no-repeat transparent;
 	background-position: -67px -18px;
 	display: inline-block;
-	position: relative;
+	position: absolute;
 	width: 11px;
 	height: 11px;
 	cursor: pointer;
 	pointer-events: none;
+	margin-block-start: 8px;
 	margin-inline-start: -16px;
 }
 
